# django-mobile-pass

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml
django_mobile_pass/: __init__.py  actions.py  apps.py  enums.py  exceptions.py  mixins.py  models.py  receivers.py  registry.py  settings.py  signals.py  tasks.py  urls.py  utils.py  views.py
django_mobile_pass/apple/: __init__.py  builders.py  entities.py  pkpass.py  reader.py
django_mobile_pass/google/: __init__.py  auth.py  builders.py  callback_verification.py  client.py  entities.py
django_mobile_pass/migrations/: 0001_initial.py  0002_rename_django_mobi_device__f0201c_idx_apple_mobil_device__501a74_idx_and_more.py
django_mobile_pass/validation/: __init__.py  apple.py  engine.py  google.py
docs/: _index.md  about-us.md  agent-integration.md  changelog.md  configuration.md  feature-matrix.md  getting-credentials-from-apple.md  getting-credentials-from-google.md  installation-setup.md  introduction.md  questions-issues.md  requirements.md  support-us.md
docs/advanced-usage/: _index.md  customizing-actions.md  customizing-models.md  events.md  handling-errors.md  reading-stored-passes.md  security.md  testing-your-passes.md
docs/apple-wallet/: _index.md  apple-specific-methods.md  attaching-wifi-credentials.md  field-zones.md  nfc.md  pass-relevance.md  (+1 more)
tests/: models.py  settings.py  test_actions.py  test_apple.py  test_docs.py  test_ecv2.py  test_google.py  test_mixins.py  test_pass_json.py  test_reader.py  test_receivers.py  test_remote_images.py  test_tasks.py  test_validation.py
(+21 files in other folders)
